--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -36,7 +36,7 @@
       "message": "Static"
    },
    "extension_description": {
-      "message": "Dark mode for every website. Take care of your eyes, use dark theme for night and daily browsing."
+      "message": "Reading for your eyes"
    },
    "filter": {
       "message": "Filter"
